# detection-3d-ros

./: README.md
detection-3d-ros/: CMakeLists.txt  package.xml
detection-3d-ros/include/: cv_processor.h  detector_3d.h  pcl_processor.h  pcl_processor.hpp
detection-3d-ros/src/: cv_processor.cpp  detection_3d_node.cpp  detector_3d.cpp
